--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7880,7 +7880,7 @@ textarea.form-control-lg {
   border-style: solid;
   border-color: 1px black;
   position: relative;
-  width: 500px;
+  width: 38%;
   height: 320px;
   background-color: white;
   margin: 15px;
