--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             .gradient-color{
                 /* background: linear-gradient(-135deg, #18b6cb, #fbf704, #fb7704);
                  */
-                background-color: whitesmoke;
+                background-color: #ececec;
             }
         </style>
     </head>
