--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7869,11 +7869,10 @@ textarea.form-control-lg {
 
 .container-interactive{
   position: relative;
-  left: 4.6875%;
-  height: 27.778%;
+  height: 100%;
   width: 70.3125%;
-  margin: 150px auto;
-  /* background: red; */
+  margin-left: 19%;
+  margin-top: 9%;
 }
 
 .container-interactive .box-math,.box-eng{
@@ -7881,40 +7880,42 @@ textarea.form-control-lg {
   border-color: 1px black;
   position: relative;
   width: 45%;
-  height: 320px;
+  height: 300px;
   background-color: white;
   margin: 15px;
   box-sizing: border-box;
   overflow: hidden;
   border-radius: 10px;
   transition: 0.5s;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
 }
 
 .container-interactive .box-math {
   float: left;
-  border-color: 1px yellow;
 }
 
 .container-interactive .box-eng {
   float: right;
 }
 
-.int-box:hover {
-  width: 50%;
-  height: 370px;
+.box-std:hover, .int-box:hover{
+  scale: 110%;
 }
  
 .container1-standard{
   position: absolute;
+  /* position: relative;
+  height: 50%;
+  width: 100%; */
   left: 275px;
   height: 120px;
   width: 1400px;
-  margin: 580px auto;
+  top: 580px;
+  margin: 5px auto;
   /* background: red; */
 }
 
-.container2-standard{
+.container2-standard {
   position: absolute;
   left: 275px;
   height: 120px;
@@ -7923,13 +7924,12 @@ textarea.form-control-lg {
   /* background: blue; */
 }
 
-
 .container1-standard .box-std , .container2-standard .box-std {
   border-style: solid;
   border-width: 2px;
   float: left;
   border-radius: 10px;
-  display: flex;
+  transition: 0.5s;
   position: relative;
   width: 170px;
   height: 100px;
