--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                 </nav>
             </div>
         </div>
-        <div class="container-interactive container-interactive-wnav">
+        <div class="container-interactive">
             <div class="box-math int-box"></div>
             <div class="box-eng int-box"></div>
         </div>
@@ -109,6 +109,8 @@
             <div class="box-std9 box-std"></div>
             <div class="box-std10 box-std"></div>
         </div>
+        <span class="triangle"><span class="innertriangle"></span><span></span>
+        <span class="rectangle"></span>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="../static/js/scripts.js"></script>
     </body>
