--- a/static/css/interactive_math.css
+++ b/static/css/interactive_math.css
@@ -23,16 +23,40 @@ main{
     align-items: center;
     background-color: #ececec;
     background: url('../assets/background_image.jpg');
-    background-color : #ececec;
+    background-color : #ffffff;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
-.game-quiz-container{
+
+.math-qna-main{
+    position: relative;
+    width: 80%;
+    height: 70vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.qnadiv{
+    /* position: relative;
+    display: flex;
+    flex-direction: column; */
+    /* padding: 3%; */
+    /* box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.4);
+    right: 10%;
     width: 40rem;
     height: 30rem;
-    background-color: lightgray;
+    background-color: #ffffff;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 30px; */
+    padding: 1%;
+    width: 10%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border: 3px solid black;
+    box-shadow: 2px 2px 10px 5px rgba(0,0,0,0.3) ;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,16 +64,22 @@ main{
     border-radius: 30px;
 }
 
-.game-details-container{
-    width: 80%;
-    height: 4rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.math-qna-main div:nth-of-type(1){
+    flex-grow: 1;
+}
+.math-qna-main div:nth-of-type(2){
+    flex-grow: 1;
 }
 
-.game-details-container h1{
-    font-size: 1.2rem;
+.anim{
+    position: relative;
+    border: 3px solid black;
+    box-shadow: 2px 2px 10px 5px rgba(0,0,0,0.3) ;
+    margin-left: 10%;
+    width: 100%;
+    height: 100%;
+    /* background-color: blueviolet; */
+    border-radius: 30px;
 }
 
 .game-question-container{
@@ -58,7 +88,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid darkgray;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 25px;
 }
 
@@ -68,7 +98,7 @@ main{
     padding: 3px;
 }
 
-.game-options-container{
+.math-qna-options{
     width: 80%;
     height: 12rem;
     display: flex;
@@ -77,13 +107,15 @@ main{
     justify-content: space-around;
 }
 
-.game-options-container span{
+.math-qna-options span{
     width: 45%;
     height: 3rem;
-    border: 2px solid darkgray;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
     overflow: hidden;
 }
+
+
 span label{
     width: 100%;
     height: 100%;
@@ -100,7 +132,6 @@ span label:hover{
     -ms-transform: scale(1.12);
     -webkit-transform: scale(1.12);
     transform: scale(1.12);
-    color: white;
 }
 
 input[type="radio"] {
@@ -108,31 +139,32 @@ input[type="radio"] {
     display: none;
 }
 
-
 input[type=radio]:checked ~ .option {
-	background: paleturquoise;
+	background: #2a8bda
 }
 
-.next-button-container{
+.submit-button-container{
     width: 50%;
     height: 3rem;
     display: flex;
     justify-content: center;
 }
-.next-button-container button{
+.submit-button-container button{
     width: 8rem;
     height: 2rem;
     border-radius: 10px;
     background: none;
     color: rgb(25, 25, 25);
     font-weight: 600;
-    border: 2px solid gray;
+    border: 2px solid rgb(0, 0, 0);
     cursor: pointer;
     outline: none;
 }
-.next-button-container button:hover{
-    background-color: rgb(143, 93, 93);
+.submit-button-container button:hover{
+    /* background-color: rgb(0, 255, 8); */
+    border-color: greenyellow;
 }
+
 
 .modal-container{
     display: none;
@@ -166,7 +198,7 @@ input[type=radio]:checked ~ .option {
 .modal-content-container h1{
     font-size: 1.3rem;
     height: 3rem;
-    color: lightgray;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
@@ -208,7 +240,7 @@ input[type=radio]:checked ~ .option {
 }
 
 @media(min-width : 300px) and (max-width : 350px){
-    .game-quiz-container{
+    .math-qna-main{
         width: 90%;
         height: 80vh;
      }
@@ -223,11 +255,11 @@ input[type=radio]:checked ~ .option {
        font-size: 0.9rem;
     }
  
-    .game-options-container span{
+    .math-qna-options span{
         width: 90%;
         height: 2.5rem;
     }
-    .game-options-container span label{
+    .math-qna-options span label{
         font-size: 0.8rem;
     }
     .modal-content-container{
@@ -241,7 +273,7 @@ input[type=radio]:checked ~ .option {
 }
 
 @media(min-width : 350px) and (max-width : 700px){
-   .game-quiz-container{
+   .math-qna-main{
        width: 90%;
        height: 80vh;
     }
@@ -257,7 +289,7 @@ input[type=radio]:checked ~ .option {
         font-size: 0.9rem;
      }
 
-    .game-options-container span{
+    .math-qna-options span{
         width: 90%;
     }
     .modal-content-container{
