--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <style>
             .gradient-color{
-                /* background: linear-gradient(-135deg, #18b6cb, #fbf704, #fb7704);
-                 */
+                /* background: linear-gradient(-135deg, #18b6cb, #fbf704, #fb7704); */
+                
                 background-color: #ececec;
             }
         </style>
@@ -109,7 +109,6 @@
             <div class="box-std9 box-std"></div>
             <div class="box-std10 box-std"></div>
         </div>
-        <span class="triangle"><span class="innertriangle"></span><span></span>
         <span class="rectangle"></span>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="../static/js/scripts.js"></script>
