--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,20 @@
                                 </nav>
                             </div>
                         </div>
+                        <div class="container-shapefloat">
+                            <div class="shapes">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
@@ -90,6 +104,7 @@
                     </div>
                 </nav>
             </div>
+
         </div>
         <div class="container-interactive container-interactive-wnav">
             <div class="box-math int-box"></div>
