--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7979,6 +7979,73 @@ textarea.form-control-lg {
   opacity: 1;
 }
 
+.container-shapefloat {
+  /* background-color: red; */
+  width: 100%;
+  height: 65.58%;
+}
+
+.shapes{
+  
+}
+
+@keyframes animate {
+  0%{
+    opacity: 1;
+    border-radius: 0;
+    transform: translateY(0) rotate(0deg);
+  }
+  100% {
+    opacity: 0;
+    border-radius: 50%;
+    transform: translateY(-1000px) rotate(720deg);
+  }
+}
+
+.shapes div{
+  position: absolute;
+  display: block;
+  border-bottom: 20px solid greenyellow;
+  border-right: 10px solid transparent;
+  border-left: 10px solid transparent;
+  opacity: 1;
+  width: 20px;
+  height: 20px;
+  bottom: 0;
+  animation: animate 25s linear infinite;
+}
+
+.shapes div:nth-child(1){
+  left: 5%;
+  animation-delay: 1s;
+}
+.shapes div:nth-child(2){
+  
+}
+.shapes div:nth-child(3){
+  
+}
+.shapes div:nth-child(4){
+  
+}
+.shapes div:nth-child(5){
+  
+}
+.shapes div:nth-child(6){
+  
+}
+.shapes div:nth-child(7){
+  
+}
+.shapes div:nth-child(8){
+  
+}
+.shapes div:nth-child(9){
+  
+}
+.shapes div:nth-child(10){
+  
+}
 
 .user-select-all {
   -webkit-user-select: all !important;
