Fixed Bug with magin being in px than % in dashboard

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7968,7 +7968,7 @@ textarea.form-control-lg {
   transition: 0.5s;
   background-color: white;
   margin: 10px auto;
-  margin-left: 80px;
+  margin-left: 6%;
 }
 
 .triangle{
