--- a/templates/index.html
+++ b/templates/index.html
@@ -107,8 +107,12 @@
 
         </div>
         <div class="container-interactive container-interactive-wnav">
-            <div class="box-math int-box"></div>
-            <div class="box-eng int-box"></div>
+            <div class="box-math int-box " id="border-math">
+                <h2 class="Math-Label-Dashboard">Maths</h2>
+            </div>
+            <div class="box-eng int-box">
+                <h2 class="Eng-Label-Dashboard">English</h2>
+            </div>
         </div>
         <div class="container1-standard">
             <div class="box-std1 box-std"></div>
