--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <style>
             .gradient-color{
                 /* background: linear-gradient(-135deg, #18b6cb, #fbf704, #fb7704); */
-                background: radial-gradient(800px,white, #a7a5a5);
+                background: radial-gradient(800px,white, #efefef);
                 /* background-color: #ececec; */
             }
             .nav-color{
@@ -117,6 +117,15 @@
             </div>
 
         </div>
+        <div class="progress-main container-interactive container-interactive-wnav">
+            <div class="chart1">
+                <h2 class="weekly-progress-label">Weekly Progress</h2>
+                <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            </div>
+            <div class="chart2">
+                <canvas id="myBarChart" width="100%" height="50"></canvas>
+            </div>
+        </div>
         <div class="container-interactive container-interactive-wnav">
             <div class="box-math int-box " id="border-math">
                 <h2 class="Math-Label-Dashboard">Maths</h2>
@@ -125,22 +134,12 @@
                 <h2 class="Eng-Label-Dashboard">English</h2>
             </div>
         </div>
-        <div class="container1-standard">
-            <div class="box-std1 box-std"></div>
-            <div class="box-std2 box-std"></div>
-            <div class="box-std3 box-std"></div>
-            <div class="box-std4 box-std"></div>
-            <div class="box-std5 box-std"></div>
-        </div>
-        <div class="container2-standard">
-            <div class="box-std6 box-std"></div>
-            <div class="box-std7 box-std"></div>
-            <div class="box-std8 box-std"></div>
-            <div class="box-std9 box-std"></div>
-            <div class="box-std10 box-std"></div>
-        </div>
         <span class="rectangle"></span>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="../static/js/scripts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="../static/assets/demo/chart-area-demo.js"></script>
+        <script src="../static/assets/demo/chart-bar-demo.js"></script>
+        <script src="../static/assets/demo/chart-pie-demo.js"></script>
     </body>
 </html>
