--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Register - SB Admin</title>
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../static/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
@@ -37,7 +37,7 @@
                                             </div>
                                             <div class="form-floating mb-3">
                                                 <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                                                <label for="inputEmail">Email address</label>
+                                                <label for="inputEmail">Parent Email address</label>
                                             </div>
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
@@ -50,6 +50,27 @@
                                                     <div class="form-floating mb-3 mb-md-0">
                                                         <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" />
                                                         <label for="inputPasswordConfirm">Confirm Password</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-floating mb-3">
+                                                <div class="input-group">
+                                                    
+                                                    <div class="rs-select2 js-select-simple select--no-search">
+                                                        <select name="subject">
+                                                            <option disabled="disabled" selected="selected">Choose standard</option>
+                                                            <option>Grade 1</option>
+                                                            <option>Grade 2</option>
+                                                            <option>Grade 3</option>
+                                                            <option>Grade 4</option>
+                                                            <option>Grade 5</option>
+                                                            <option>Grade 6</option>
+                                                            <option>Grade 7</option>
+                                                            <option>Grade 8</option>
+                                                            <option>Grade 9</option>
+                                                            <option>Grade 10</option>
+                                                        </select>
+                                                        <div class="select-dropdown"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -83,6 +104,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src="../static/js/scripts.js"></script>
     </body>
 </html>
