--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <style>
             .gradient-color{
-                /* background: linear-gradient(-135deg, #18b6cb, #fbf704, #fb7704); */
-                background: radial-gradient(800px,white, #efefef);
+                background: linear-gradient(-135deg, #18b6cb, #dedb50, #e88b3a);
+                
                 /* background-color: #ececec; */
             }
             .nav-color{
@@ -119,10 +119,11 @@
         </div>
         <div class="progress-main container-interactive container-interactive-wnav">
             <div class="chart1">
-                <h2 class="weekly-progress-label">Weekly Progress</h2>
+                <h2 class="progress-label">Weekly Progress</h2>
                 <canvas id="myAreaChart" width="100%" height="30"></canvas>
             </div>
             <div class="chart2">
+                <h2 class="progress-label">Performance Index</h2>
                 <canvas id="myBarChart" width="100%" height="50"></canvas>
             </div>
         </div>
