interactive math bg change

--- a/templates/interactive_math.html
+++ b/templates/interactive_math.html
@@ -10,6 +10,20 @@
 </head>
 <body onload="fooo()">
     <main>
+      <div class="floating-back-main">
+        <div class="circles">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      
       <!-- creating a modal for when quiz ends -->
       <div class="modal-container" id="score-modal">
   
@@ -85,6 +99,7 @@
           <div class="anim"></div>
         </div>
       </div>
+    </div>
     </main>
     
   </body>
