--- a/static/css/interactive_math.css
+++ b/static/css/interactive_math.css
@@ -21,9 +21,9 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #ececec;
+    /* background-color: #ececec; */
     background: url('../assets/background_image.jpg');
-    background-color : #e8e9a7;
+    /* background-color : #e8e9a7; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -55,14 +55,119 @@ main{
     width: 10%;
     height: 100%;
     /* background-color: rgb(255, 255, 255); */
-    background: linear-gradient(45deg,red,teal);
-    border: 3px solid black;
-    box-shadow: 2px 2px 10px 5px rgba(0,0,0,0.3) ;
+    /* background: linear-gradient(45deg,red,teal); */
+    border: 3px solid white;
+    box-shadow: 2px 2px 10px 5px rgba(255, 255, 255, 0.3) ;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     border-radius: 30px;
+}
+
+.floating-back-main{
+    padding-top: 7.5%;
+    padding-left: 15%;
+    background: linear-gradient(90deg, #ff9966, #ff5e62);
+    width: 100%;
+    height: 100vh;
+}
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+@keyframes animate{
+    0%{
+        opacity: 1;
+        border-radius: 0;
+        transform: translateY(0) rotate(0deg);
+    }
+    100% {
+        opacity: 0;
+        border-radius: 50%;
+        transform: translateY(-1000px) rotate(720deg);
+    }
+}
+.circles div {
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255,0.2);
+    bottom: -150px;
+    animation: animate 25s linear infinite;
+}
+
+.circles div:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+.circles div:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+.circles div:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+    
+}
+.circles div:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+.circles div:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+.circles div:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+.circles div:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+.circles div:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+.circles div:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+    
+}
+.circles div:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
 }
 
 .math-qna-main div:nth-of-type(1){
@@ -74,12 +179,12 @@ main{
 
 .anim{
     position: relative;
-    border: 3px solid black;
-    box-shadow: 2px 2px 10px 5px rgba(0,0,0,0.3) ;
+    border: 3px solid rgb(255, 255, 255);
+    box-shadow: 2px 2px 10px 5px rgba(255, 255, 255, 0.3) ;
     margin-left: 10%;
     width: 100%;
     height: 100%;
-    background-color: lightpink;
+    /* background-color: lightpink; */
     border-radius: 30px;
 }
 
