--- a/static/css/interactive_math.css
+++ b/static/css/interactive_math.css
@@ -179,6 +179,7 @@ main{
 
 .anim{
     position: relative;
+    align-content: center;
     border: 3px solid rgb(255, 255, 255);
     box-shadow: 2px 2px 10px 5px rgba(255, 255, 255, 0.3) ;
     margin-left: 10%;
