Changed Hints for interactive

--- a/templates/interactive_math.html
+++ b/templates/interactive_math.html
@@ -52,7 +52,6 @@
             <div class="game-question-container">
               <h1 id="display-question"></h1>
             </div>
-      
             <div class="math-qna-options">
       
               <div class="modal-container" id="option-modal">
@@ -92,6 +91,7 @@
       
             <div class="submit-button-container">
               <button class="submit_button" onclick="handleNextQuestion()">Submit</button>
+              <button onclick="hintMe()" style="color:rgba(200,200,200,0.9);border:none;font-size: 20;font-family: Polaris;">H I N T</button>
             </div>
           <!-- </div> -->
         </div>
