Added Hints to interactive maths for addition

--- a/templates/interactive_math.html
+++ b/templates/interactive_math.html
@@ -57,8 +57,8 @@
               <div class="modal-container" id="option-modal">
       
                 <div class="modal-content-container">
-                  <h1>Please Pick An Option</h1>
-      
+                  <!-- <h1></h1> -->
+                  <iframe class="hint-yt" width="560" height="315" src="https://www.youtube.com/embed/RKL0TX8ogmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <div class="modal-button-container">
                     <button onclick="closeOptionModal()">Continue</button>
                   </div>
@@ -91,8 +91,9 @@
       
             <div class="submit-button-container">
               <button class="submit_button" onclick="handleNextQuestion()">Submit</button>
-              <button onclick="hintMe()" style="color:rgba(200,200,200,0.9);border:none;font-size: 20;font-family: Polaris;">H I N T</button>
+              <!-- <button onclick="hintMe()" style="color:rgba(200,200,200,0.9);border:none;font-size: 20;font-family: Polaris;">H I N T</button> -->
             </div>
+            <div class="hint-button-container"><button onclick="hintMe()" class="hint-button" >Hint</button></div>
           <!-- </div> -->
         </div>
         <div class="animdiv">
