--- a/static/css/interactive_math.css
+++ b/static/css/interactive_math.css
@@ -308,14 +308,31 @@ input[type=radio]:hover:before ~ .option {
     display: flex;
     justify-content: center;
 }
+
+.hint-button-container button{
+    width: 8rem;
+    height: 2rem;
+    border-radius: 10px;
+    background: none;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    border: 2px solid rgb(255, 255, 255);
+    cursor: pointer;
+    outline: none;
+}
+
+.hint-button:hover{
+    border-color: red;
+}
+
 .submit-button-container button{
     width: 8rem;
     height: 2rem;
     border-radius: 10px;
     background: none;
-    color: rgba(255, 255, 255,0.5);
+    color: rgb(255, 255, 255);
     font-weight: 600;
-    border: 2px solid rgb(255,255,255,0.5);
+    border: 2px solid rgb(255, 255, 255);
     cursor: pointer;
     outline: none;
 }
@@ -344,8 +361,10 @@ input[type=radio]:hover:before ~ .option {
 }
 
 .modal-content-container{
-    height: 20rem;
-    width: 25rem;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    position: relative;
+    width: 70%;
     background-color: rgb(43, 42, 42);
     display: flex;
     flex-direction: column;
@@ -375,24 +394,30 @@ input[type=radio]:hover:before ~ .option {
     text-align: center;
 }
 
+.hint-yt{
+    top: 500px;
+}
+
 .modal-button-container{
-    height: 2rem;
+    position: absolute;
+    /* height: 2rem; */
     width: 100%;
     display: flex;
-    align-items: center;
+    top: 80%;
+    /* align-items: center; */
     justify-content: center;
 }
 
 .modal-button-container button{
-    width: 10rem;
+    width: 8rem;
     height: 2rem;
+    border-radius: 10px;
     background: none;
-    outline: none;
-    border: 1px solid rgb(252, 242, 241);
-    color: white;
-    font-size: 1.1rem;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    border: 2px solid rgb(255, 255, 255);
     cursor: pointer;
-    border-radius: 20px;
+    outline: none;
 }
 .modal-button-container button:hover{
     background-color: rgb(83, 82, 82);
@@ -422,8 +447,8 @@ input[type=radio]:hover:before ~ .option {
         font-size: 0.8rem;
     }
     .modal-content-container{
-        width: 90%;
-        height: 25rem;
+        width: 100%;
+        /* height: 25rem; */
     }
     
     .modal-content-container h1{
