Changed Register CSS

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7780,11 +7780,7 @@ textarea.form-control-lg {
 .text-opacity-100 {
   --bs-text-opacity: 1;
 }
-
-.bg-primary {
-  --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
-}
+/*MMMMMMMMMMMMMMM*/
 
 .bg-secondary {
   --bs-bg-opacity: 1;
